# image-classifier

./: .gitignore  LICENSE  README.md  _env.py  dataset.yaml  dup-find.py  image-folder.py  nu-classify.py  nu-detect.py  paddleocr2labelbee.py  predict.py  quality-train.py  requirments.txt  resite-mini.train  setup.cfg  train.py  trainvit.py
bash/: predict  setup-conda  train  train-c3
configs/: cartoon-convit.yaml  cartoon3-convit.yaml  cat12-convit.yaml  xarts6-convit.yaml
xclas/: __init__.py  cats12.py  datamodules.py  modules.py  qualitym.py
