[metadata]
project_name = {{LightningCLI project name}}
author = hzane
contact = hzane@dont.contact.me
description_file = README.md


[flake8]
max-complexity = 10
max_line_length = 75
format = pylint
ignore =
    D203
    E203
    E251
    F401  # Module imported but unused
    W504  # Line break occurred after a binary operator
    F841  # Local variable name is assigned to but never used
    F403  # from module import *
    E501  # Line too long
exclude =
    .git
    __pycache__
    data/*
    datasets/*
    tests/*
    dist
    build
    notebooks/*
    .ipynb_checkpoints
    logs/*


[yapf]
based_on_style                                 = google
use_tabs                                       = false
continuation_indent_width                      = 4
indent_width                                   = 4
column_limit                                   = 75
dedent_closing_brackets                        = true
coalesce_brackets                              = true
arithmetic_precedence_indication               = true
continuation_align_style                       = SPACE
split_before_bitwise_operator                  = true
space_between_ending_comma_and_closing_bracket = true
spaces_around_default_or_named_assign          = true
blank_line_before_nested_class_or_def          = false
allow_multiline_lambdas                        = true
split_arguments_when_comma_terminated          = true
each_dict_entry_on_separate_line               = true
split_complex_comprehension                    = false
split_penalty_comprehension                    = 80
split_penalty_bitwise_operator                 = 300
split_before_named_assigns                     = true
split_before_first_argument                    = true
split_penalty_after_opening_bracket            = 60
